--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="fi">
 <head>
     <meta charset="UTF-8">
-    <title>DEMOSIVUSTO!</title>
+    <title>DEMOSIVUSTO ver2</title>
 </head>
 <body>
-    <h1>Tervetuloa DEMO SIVUSTOLLE!</h1>
+    <h1>Tervetuloa DEMO SIVUSTOLLE ver2</h1>
     <p>Se toimii sittenkin!</p>
 </body>
 </html>
